--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>Название страницы</title>
+			<title>Коты, коты и еще раз коты</title>
 		<link rel="icon" href="cat_icon_138789.ico">
 		</head>
 		<body background="1666315499_22-mykaleidoscope-ru-p-milie-kartinki-na-oboi-krasivo-22.jpg">
